# rule-audit

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTENT.md  LAUNCH-READY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_launch/: LAUNCH-PLAN.md  SHIP-REPORT.md  claim.md  classification.md  gh-metadata.sh  hygiene-report.md  positioning.md  preship-gate.md  release.sh
_launch/images/: demo-plan.md  prompts.md
_launch/outreach/: blog-post.devto.md  blog-post.md  hn-show.md  linkedin.md  x-thread.md
_launch/outreach/awesome-prs/: README.md
_launch/outreach/reddit/: r-MachineLearning.md
_launch/paper/: DECISION.md  abstract.md
benchmarks/: README.md
launch/: awesome-list-pr.md  demo-gif-shotlist.md  dev-to.md  linkedin.md  paper-abstract.md  reddit-r-machinelearning.md  show-hn.md  social-preview.md  x-twitter.md
rule_audit/: __init__.py  __main__.py  analyzer.py  cli.py  edge_cases.py  parser.py  report.py
samples/: basic_assistant.txt  code_assistant.txt  content_moderator.txt  customer_support.txt  enterprise_rag.txt
tests/: test_analyzer.py  test_benchmark.py  test_parser.py  test_philosophical.py
